@@ -1,3 +1,9 @@
+2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b22
+
+	* Change: Standardize on getRequestVar instead of Get/Post/Cookie
+
+	* Change: $_SERVER is a trusted source.. no need to sanitize.
+
 2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b21
 
 	* Change: get(Request|Get|Post|Files|Env|Server)Vars() functions.
